# z-benchmarks

./: README.md  json-benchmark-result.html  z-benchmarks.cabal
json-benchmark/: json-bench.hs  json-benchmark-result.html
redis-benchmark/: redis-bench-base.hs  redis-bench-z.hs
redis-benchmark/tcp_golang/: Makefile  main.go
redis-benchmark/tcp_mio/: Cargo.toml
redis-benchmark/tcp_mio/src/: main.rs
redis-benchmark/tcp_uv/: .gitignore  CMakeLists.txt  build.sh  main.cpp
